--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.24.2",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "postcss": "^8.4.44",
     "react": "^18.3.1",
